style: ensure skills section wraps to new line when container width is reached

--- a/src/styles/SkillsInformation.css
+++ b/src/styles/SkillsInformation.css
@@ -2,3 +2,10 @@
     display: flex;
     flex-direction: column;
 }
+
+.skills {
+    padding-top: 1%;
+    word-wrap: break-word;
+    display: flex;
+    flex-wrap: wrap;
+}
